--- a/javaweb/.settings/org.eclipse.wst.common.component
+++ b/javaweb/.settings/org.eclipse.wst.common.component
@@ -3,7 +3,7 @@
     <wb-module deploy-name="javaweb">
         <wb-resource deploy-path="/" source-path="/WebRoot"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="/webdemo"/>
+        <property name="context-root" value="/javaweb"/>
         <property name="java-output-path" value="/javaweb/WebRoot/WEB-INF/classes"/>
     </wb-module>
 </project-modules>
